--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,10 @@ automium-web==0.1.1
 autopep8==1.4.4
 Click==7.0
 colorama==0.4.3
+dj-database-url==0.5.0
 Django==3.0.2
 django-crispy-forms==1.8.1
+django-heroku==0.3.1
 Flask==1.1.1
 gunicorn==20.0.4
 isort==4.3.21
@@ -17,10 +19,12 @@ legacy==0.1.6
 MarkupSafe==1.1.1
 mccabe==0.6.1
 Pillow==7.0.0
+psycopg2==2.8.4
 pycodestyle==2.5.0
 pylint==2.4.4
 pytz==2019.3
 six==1.13.0
 sqlparse==0.3.0
 Werkzeug==0.16.0
+whitenoise==5.0.1
 wrapt==1.11.2
